--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=admin
 DB_NAME=uniza-parking-system
-EXTERNAL_API_URL=https://nic.uniza.sk/kamery/1
+EXTERNAL_API_URL=http://localhost:5000
 EXTERNAL_API_KEY=123456
 TZ=Europe/Bratislava
