--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "moment": "^2.30.1",
     "node-cron": "^3.0.3",
     "pg": "^8.11.3"
   }
