--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
+    "expo-server-sdk": "^3.7.0",
     "express": "^4.18.2",
     "moment": "^2.30.1",
     "node-cron": "^3.0.3",
