--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "expo-server-sdk": "^3.7.0",
     "express": "^4.18.2",
+    "geolib": "^3.3.4",
     "moment": "^2.30.1",
     "node-cron": "^3.0.3",
     "pg": "^8.11.3"
