--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^16.3.1",
     "expo-server-sdk": "^3.7.0",
     "express": "^4.18.2",
+    "express-basic-auth": "^1.2.1",
     "geolib": "^3.3.4",
+    "js-base64": "^3.7.7",
     "moment": "^2.30.1",
     "node-cron": "^3.0.3",
     "pg": "^8.11.3"
