--- a/.env
+++ b/.env
@@ -9,6 +9,5 @@ MPA_AUTH_USERNAME=mobile-parking-application
 MPA_AUTH_PASSWORD=316a68cf-d8ef-4424-93dd-a738b1a1f1b3
 PPM_AUTH_USERNAME=parking-processing-module
 PPM_AUTH_PASSWORD=0ec3c4c9-d6d3-40b8-8655-aacc1259793f
-EXTERNAL_API_URL=http://localhost:5000
-EXTERNAL_API_KEY=123456
+PPM_URL=http://localhost:5000
 TZ=Europe/Bratislava
