--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=admin
+SALT_ROUNDS=7
 DB_NAME=uniza-parking-system
 MPA_AUTH_USERNAME=mobile-parking-application
 MPA_AUTH_PASSWORD=316a68cf-d8ef-4424-93dd-a738b1a1f1b3
