--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "js-base64": "^3.7.7",
     "moment": "^2.30.1",
     "node-cron": "^3.0.3",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
