new endpoints, update history adding

--- a/.env
+++ b/.env
@@ -10,5 +10,7 @@ MPA_AUTH_USERNAME=mobile-parking-application
 MPA_AUTH_PASSWORD=316a68cf-d8ef-4424-93dd-a738b1a1f1b3
 PPM_AUTH_USERNAME=parking-processing-module
 PPM_AUTH_PASSWORD=0ec3c4c9-d6d3-40b8-8655-aacc1259793f
+APPLICATION_USERNAME=parking-processing-module
+APPLICATION_PASSWORD=aec3c4c9-c6d3-e0b8-8655-xacc1259793b
 PPM_URL=http://localhost:5000
 TZ=Europe/Bratislava
