init db on start

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=admin
 SALT_ROUNDS=7
+DEFAULT_DB_NAME=postgres
 DB_NAME=uniza-parking-system
 MPA_AUTH_USERNAME=mobile-parking-application
 MPA_AUTH_PASSWORD=316a68cf-d8ef-4424-93dd-a738b1a1f1b3
